[package]
name = "pelp"
description = "A (p)resentation h(elp)er. Makes it easy to create a revealjs presentation from a Markdown file."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Vlad Petrov <oss@ejiek.id>"]
repository = "https://github.com/ejiek/pelp"
homepage = "https://github.com/ejiek/pelp"
readme = "README.md"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
